# hull

./: .clangd  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  biome.json  flake.nix  justfile
.github/workflows/: cf_pages.yml  ci.yml
docs/: _headers  _worker.js  book.typ  introduction.typ  package.nix  robots.txt  toc.nix  tola.toml
docs/advanced/: custom-judgers.typ  document-generation-with-typst.typ  problem-and-contest-targets.typ
docs/content/: 404.typ  index.typ
docs/getting-started/: basic-workflow.typ  best-practices-and-conventions.typ  installation-and-setup.typ  understanding-contest-nix.typ  understanding-problem-nix.typ
docs/src/: introduction.typ
docs/templates/: base.typ  ebook.typ  page.typ  tola.typ
nix/lib/: check.nix  compile.nix  default.nix  docs.nix  document.nix  evalContest.nix  evalProblem.nix  generate.nix  judge.nix  judgeSingleFile.nix  judger.nix  language.nix  patch.nix  patchCplibProgram.nix  problemModule.nix  runWasm.nix  runtime.nix  stress.nix  target.nix  types.nix  validate.nix
nix/pkgs/: clang.nix  compiler-rt.nix  default.nix
nix/templates/: default.nix
scripts/: integration_test.sh
src/: cli.rs  format.rs  interactive.rs  main.rs  nix.rs  platform.rs  report.rs  runtime.rs  utils.rs
src/cmd/: build.rs  build_contest.rs  bundle_judge.rs  cnoi_self_eval.rs  compile.rs  compile_cwasm.rs  hydro_custom_judge.rs  judge.rs  lemon_custom_judge.rs  mod.rs  patch.rs  patch_includes.rs  report.rs  run.rs  run_wasm.rs  self_eval.rs  selfeval.rs  source_config.rs  stress.rs  uoj_custom_judge.rs
(+236 files in other folders)
