[package]
name = "hull"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
cap-std = "3"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
rand = "0.8"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasi-common = "35"
wiggle = "35"

[dependencies.wasmtime]
version = "35"
default-features = false
features = ["std", "cranelift", "runtime", "wat"]
