[package]
name = "hull"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
cap-std = "3"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
num_cpus = "1"
rand = "0.8"
regex = "1"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"
wasi-common = "37"
wiggle = "37"

[dependencies.wasmtime]
version = "37"
default-features = false
features = ["std", "cranelift", "runtime", "wat"]

[build-dependencies]
cc = "*"
